syntax = "proto3";

package core;
option go_package = "{{ .Package }}/core";

message HealthCheckRequest {
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
}