syntax = "proto3";

package {{.Name}};
option go_package = "{{ .Package }}/{{ .Name }}";

import "google/protobuf/empty.proto";
import "core/protobuf/proto.proto";
{{ if .Gateway }}import "google/api/annotations.proto";{{end}}

service {{.Name | Title}}Service {
    rpc GetVersion (google.protobuf.Empty) returns (core.Version) {
    }

    rpc Check(google.protobuf.Empty) returns (core.HealthCheckResponse){
    }
}

